fix collapsing nav items

--- a/frontend/components/side_panels/SiteNavSidePanel/_styles.scss
+++ b/frontend/components/side_panels/SiteNavSidePanel/_styles.scss
@@ -7,10 +7,6 @@
     background-color: $core-black-over;
   }
 
-  @include breakpoint(smalldesk) {
-    justify-content: center;
-  }
-
   &--multiple.site-nav-item--active {
     background-color: transparent;
     border-right: 0;
@@ -32,10 +28,6 @@
     width: 16px;
     height: 16px;
     vertical-align: sub;
-
-    @include breakpoint(smalldesk) {
-      margin-right: 0;
-    }
   }
 
   &__name {
@@ -51,10 +43,6 @@
     display: flex;
     align-items: center;
     padding: 14px 20px;
-
-    @include breakpoint(smalldesk) {
-      padding: 11px 14px;
-    }
   }
 
   &--active {
@@ -67,13 +55,6 @@
 
     .site-nav-item__name {
       font-weight: $bold;
-    }
-  }
-
-  &:last-child {
-
-    @include breakpoint(smalldesk) {
-      margin-right: 0;
     }
   }
 }
